--- a/longhuarst-serial-mysql-2/longhuarst-serial-mysql-2/Makefile
+++ b/longhuarst-serial-mysql-2/longhuarst-serial-mysql-2/Makefile
@@ -23,7 +23,7 @@ error:
 	$(error Invalid configuration, please check your inputs)
 endif
 
-SOURCEFILES := clh/debug/syspf.cpp clh/serial/tty.cpp longhuarst-serial-mysql-2.cpp
+SOURCEFILES := clh/debug/syspf.cpp clh/epoll/epoll.cpp clh/mysql/mysql.cpp clh/serial/tty.cpp longhuarst-serial-mysql-2.cpp
 EXTERNAL_LIBS := 
 EXTERNAL_LIBS_COPIED := $(foreach lib, $(EXTERNAL_LIBS),$(BINARYDIR)/$(notdir $(lib)))
 
@@ -166,6 +166,14 @@ $(BINARYDIR)/%.o : %.cxx $(all_make_files) |$(BINARYDIR)
 
 
 $(BINARYDIR)/syspf.o : clh/debug/syspf.cpp $(all_make_files) |$(BINARYDIR)
+	$(CXX) $(CXXFLAGS) -c $< -o $@ -MD -MF $(@:.o=.dep)
+
+
+$(BINARYDIR)/epoll.o : clh/epoll/epoll.cpp $(all_make_files) |$(BINARYDIR)
+	$(CXX) $(CXXFLAGS) -c $< -o $@ -MD -MF $(@:.o=.dep)
+
+
+$(BINARYDIR)/mysql.o : clh/mysql/mysql.cpp $(all_make_files) |$(BINARYDIR)
 	$(CXX) $(CXXFLAGS) -c $< -o $@ -MD -MF $(@:.o=.dep)
 
 
