--- a/longhuarst-serial-mysql-2/longhuarst-serial-mysql-2/longhuarst-serial-mysql-2.vcxproj
+++ b/longhuarst-serial-mysql-2/longhuarst-serial-mysql-2/longhuarst-serial-mysql-2.vcxproj
@@ -112,6 +112,8 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="clh\debug\syspf.cpp" />
+    <ClCompile Include="clh\epoll\epoll.cpp" />
+    <ClCompile Include="clh\mysql\mysql.cpp" />
     <ClCompile Include="clh\serial\tty.cpp" />
     <ClCompile Include="longhuarst-serial-mysql-2.cpp" />
   </ItemGroup>
@@ -122,6 +124,8 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="clh\debug\syspf.h" />
+    <ClInclude Include="clh\epoll\epoll.h" />
+    <ClInclude Include="clh\mysql\mysql.h" />
     <ClInclude Include="clh\serial\tty.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
